--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ h4 { font-size: 24px; }
 h5 { font-size: 20px; }
 h6 { font-size: 16px; }
 
+.quote {
+    margin: 1em;
+}
+
 .s1 {
     background-color: var(--mainColor);
     border-bottom: 1px solid var(--borderColor);
