--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ h6 { font-size: 16px; }
     margin: 1em;
 }
 
+.current-choices {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding-top: 25px;
+    padding-bottom: 25px;
+    gap: 100px;
+}
+
 .s1 {
     background-color: var(--mainColor);
     border-bottom: 1px solid var(--borderColor);
