--- a/style.css
+++ b/style.css
@@ -51,18 +51,6 @@ h4 { font-size: 24px; }
 h5 { font-size: 20px; }
 h6 { font-size: 16px; }
 
-.quote {
-    margin: 1em;
-}
-
-.current-choices {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    padding-top: 25px;
-    padding-bottom: 25px;
-    gap: 100px;
-}
-
 .s1 {
     background-color: var(--mainColor);
     border-bottom: 1px solid var(--borderColor);
@@ -78,6 +66,24 @@ h6 { font-size: 16px; }
 .main-container {
     width: 1200px;
     margin: 0 auto;
+}
+
+.quote {
+    margin: 1em;
+}
+
+.current-choices {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding-top: 25px;
+    padding-bottom: 50px;
+    gap: 100px;
+}
+
+.current-selection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .greeting-wrapper {
@@ -226,14 +232,14 @@ h6 { font-size: 16px; }
 
 #preview-shadow {
     background-color: var(--previewShadow);
-    width: 300px;
-    height: 180px;
+    width: 375px;
     padding-left: 30px;
     padding-top: 30px;
+    height: 575px;
 }
 
 #preview {
-    width: 300px;
+    width: 375px;
     border: 1.5px solid #17A2B8;
     background-color: var(--previewBG);
     padding: 15px;
