--- a/style.css
+++ b/style.css
@@ -70,20 +70,27 @@ h6 { font-size: 16px; }
 
 .quote {
     margin: 1em;
+    justify-content: center;
 }
 
 .current-choices {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
     padding-top: 25px;
     padding-bottom: 50px;
-    gap: 100px;
+    justify-content: space-between;
 }
 
 .current-selection {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.physical, .audible {
+    display: grid;
+    width: 420px;
+    justify-content: center;
 }
 
 .greeting-wrapper {
@@ -314,6 +321,7 @@ h6 { font-size: 16px; }
 }
 
 .post {
+    position: relative;
     border: 1px solid var(--borderColor);
     -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
@@ -340,6 +348,63 @@ h6 { font-size: 16px; }
 .post-intro {
     color: #4B5156;
     font-size: 14px;
+}
+
+.overlay {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: .3s ease;
+}
+
+.post:hover .overlay {
+    transform: scale(1);
+    background-color: var(--previewShadow);
+}
+
+.overlay img {
+    position: relative;
+    transition: .3s ease-in-out;
+    max-height: 100%;
+}
+
+.thumbnail-zoom {
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.pages {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.pages a {
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+.previous {
+    background-color: var(--buttonColor);
+    color: #FFF;
+}
+
+.next {
+    background-color: var(--buttonColor);
+    color: #FFF;
+}
+
+.round {
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
 }
 
 #contact-form {
